{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 91,
  "lineage": "f83a8494-a714-db4a-3e0a-bef0d9f810bc",
  "resources": [
    {
      "module": "module.module_prod",
      "mode": "data",
      "type": "aws_vpc",
      "name": "prod_default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].apsouth1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:729397435375:vpc/vpc-0b5c9fffa21a96152",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0a00af283b5eb9d84",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-f959b892",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "IU-Prod"
                ]
              }
            ],
            "id": "vpc-0b5c9fffa21a96152",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-055fbceb46d62c1e3",
            "owner_id": "729397435375",
            "tags": {
              "Name": "IU-Prod"
            }
          }
        }
      ]
    },
    {
      "module": "module.module_sit",
      "mode": "data",
      "type": "aws_vpc",
      "name": "sit_default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].apsouth1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:729397435375:vpc/vpc-67b8820f",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-cd3d64a5",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-f959b892",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "SIT-Default"
                ]
              }
            ],
            "id": "vpc-67b8820f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-bea259d5",
            "owner_id": "729397435375",
            "tags": {
              "Name": "SIT-Default"
            }
          }
        }
      ]
    },
    {
      "module": "module.module_uat",
      "mode": "data",
      "type": "aws_vpc",
      "name": "uat_default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].apsouth1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:729397435375:vpc/vpc-0f0250e13306ff029",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-05c85e823edca839a",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-f959b892",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "IU-UAT-NEW"
                ]
              }
            ],
            "id": "vpc-0f0250e13306ff029",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04698168dc8fe0f5a",
            "owner_id": "729397435375",
            "tags": {
              "Name": "IU-UAT-NEW"
            }
          }
        }
      ]
    },
    {
      "module": "module.module_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:729397435375:network-acl/acl-0a8abb471644ce0ed",
            "default_network_acl_id": "acl-0a8abb471644ce0ed",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0a8abb471644ce0ed",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "729397435375",
            "subnet_ids": [
              "subnet-00012e6d44b24475c",
              "subnet-026ed9c8a85992bb1",
              "subnet-082c1eb021229acbc",
              "subnet-08ab41500e7101b06",
              "subnet-0a25b59ecb363cee1",
              "subnet-0c2bffd8602b7b913"
            ],
            "tags": {
              "Name": "iu-dev-data-platform-vpc-default",
              "kubernetes.io/cluster/iu-dev-data-platform-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "iu-dev-data-platform-vpc-default",
              "kubernetes.io/cluster/iu-dev-data-platform-eks-cluster": "shared"
            },
            "vpc_id": "vpc-068ad57d05edf7b40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:729397435375:route-table/rtb-0f1828533973a7080",
            "default_route_table_id": "rtb-0f1828533973a7080",
            "id": "rtb-0f1828533973a7080",
            "owner_id": "729397435375",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "iu-dev-data-platform-vpc-default",
              "kubernetes.io/cluster/iu-dev-data-platform-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "iu-dev-data-platform-vpc-default",
              "kubernetes.io/cluster/iu-dev-data-platform-eks-cluster": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-068ad57d05edf7b40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:729397435375:security-group/sg-0274cea81039b8bdf",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0274cea81039b8bdf",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "729397435375",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "iu-dev-data-platform-vpc-default",
              "kubernetes.io/cluster/iu-dev-data-platform-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "iu-dev-data-platform-vpc-default",
              "kubernetes.io/cluster/iu-dev-data-platform-eks-cluster": "shared"
            },
            "vpc_id": "vpc-068ad57d05edf7b40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eccad3510e5a382b",
            "association_id": "eipassoc-083fa69de45705170",
            "domain": "vpc",
            "id": "eipalloc-0eccad3510e5a382b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e487281810eb7f28",
            "private_dns": "ip-10-0-4-225.ec2.internal",
            "private_ip": "10.0.4.225",
            "public_dns": "ec2-34-192-74-72.compute-1.amazonaws.com",
            "public_ip": "34.192.74.72",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "iu-dev-data-platform-vpc-us-east-1a",
              "kubernetes.io/cluster/iu-dev-data-platform-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "iu-dev-data-platform-vpc-us-east-1a",
              "kubernetes.io/cluster/iu-dev-data-platform-eks-cluster": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.module_vpc.data.aws_availability_zones.available",
            "module.module_vpc.module.vpc.aws_internet_gateway.this",
            "module.module_vpc.module.vpc.aws_vpc.this",
            "module.module_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:729397435375:internet-gateway/igw-0c1251c2c5b30cc54",
            "id": "igw-0c1251c2c5b30cc54",
            "owner_id": "729397435375",
            "tags": {
              "Name": "iu-dev-data-platform-vpc",
              "kubernetes.io/cluster/iu-dev-data-platform-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "iu-dev-data-platform-vpc",
              "kubernetes.io/cluster/iu-dev-data-platform-eks-cluster": "shared"
            },
            "vpc_id": "vpc-068ad57d05edf7b40"
          },
          "dependencies": [
            "module.module_vpc.module.vpc.aws_vpc.this",
            "module.module_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eccad3510e5a382b",
            "association_id": "eipassoc-083fa69de45705170",
            "connectivity_type": "public",
            "id": "nat-0aea7d7ce8486823b",
            "network_interface_id": "eni-0e487281810eb7f28",
            "private_ip": "10.0.4.225",
            "public_ip": "34.192.74.72",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a25b59ecb363cee1",
            "tags": {
              "Name": "iu-dev-data-platform-vpc-us-east-1a",
              "kubernetes.io/cluster/iu-dev-data-platform-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "iu-dev-data-platform-vpc-us-east-1a",
              "kubernetes.io/cluster/iu-dev-data-platform-eks-cluster": "shared"
            }
          },
          "dependencies": [
            "module.module_vpc.data.aws_availability_zones.available",
            "module.module_vpc.module.vpc.aws_eip.nat",
            "module.module_vpc.module.vpc.aws_internet_gateway.this",
            "module.module_vpc.module.vpc.aws_subnet.public",
            "module.module_vpc.module.vpc.aws_vpc.this",
            "module.module_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03b3c996c89b096021080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0aea7d7ce8486823b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03b3c996c89b09602",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_vpc.data.aws_availability_zones.available",
            "module.module_vpc.module.vpc.aws_eip.nat",
            "module.module_vpc.module.vpc.aws_internet_gateway.this",
            "module.module_vpc.module.vpc.aws_nat_gateway.this",
            "module.module_vpc.module.vpc.aws_route_table.private",
            "module.module_vpc.module.vpc.aws_subnet.public",
            "module.module_vpc.module.vpc.aws_vpc.this",
            "module.module_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c1251c2c5b30cc54",
            "id": "r-rtb-0cb116bdd1c3764c11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cb116bdd1c3764c1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_vpc.module.vpc.aws_internet_gateway.this",
            "module.module_vpc.module.vpc.aws_route_table.public",
            "module.module_vpc.module.vpc.aws_vpc.this",
            "module.module_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:729397435375:route-table/rtb-03b3c996c89b09602",
            "id": "rtb-03b3c996c89b09602",
            "owner_id": "729397435375",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0aea7d7ce8486823b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "iu-dev-data-platform-vpc-private",
              "kubernetes.io/cluster/iu-dev-data-platform-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "iu-dev-data-platform-vpc-private",
              "kubernetes.io/cluster/iu-dev-data-platform-eks-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-068ad57d05edf7b40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_vpc.data.aws_availability_zones.available",
            "module.module_vpc.module.vpc.aws_vpc.this",
            "module.module_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:729397435375:route-table/rtb-0cb116bdd1c3764c1",
            "id": "rtb-0cb116bdd1c3764c1",
            "owner_id": "729397435375",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c1251c2c5b30cc54",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "iu-dev-data-platform-vpc-public",
              "kubernetes.io/cluster/iu-dev-data-platform-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "iu-dev-data-platform-vpc-public",
              "kubernetes.io/cluster/iu-dev-data-platform-eks-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-068ad57d05edf7b40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_vpc.module.vpc.aws_vpc.this",
            "module.module_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6249d608adc8933",
            "route_table_id": "rtb-03b3c996c89b09602",
            "subnet_id": "subnet-08ab41500e7101b06"
          },
          "dependencies": [
            "module.module_vpc.data.aws_availability_zones.available",
            "module.module_vpc.module.vpc.aws_route_table.private",
            "module.module_vpc.module.vpc.aws_subnet.private",
            "module.module_vpc.module.vpc.aws_vpc.this",
            "module.module_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f47f65aa45ae7cab",
            "route_table_id": "rtb-03b3c996c89b09602",
            "subnet_id": "subnet-0c2bffd8602b7b913"
          },
          "dependencies": [
            "module.module_vpc.data.aws_availability_zones.available",
            "module.module_vpc.module.vpc.aws_route_table.private",
            "module.module_vpc.module.vpc.aws_subnet.private",
            "module.module_vpc.module.vpc.aws_vpc.this",
            "module.module_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029c6028967d0089c",
            "route_table_id": "rtb-03b3c996c89b09602",
            "subnet_id": "subnet-082c1eb021229acbc"
          },
          "dependencies": [
            "module.module_vpc.data.aws_availability_zones.available",
            "module.module_vpc.module.vpc.aws_route_table.private",
            "module.module_vpc.module.vpc.aws_subnet.private",
            "module.module_vpc.module.vpc.aws_vpc.this",
            "module.module_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd349f34b3783c49",
            "route_table_id": "rtb-0cb116bdd1c3764c1",
            "subnet_id": "subnet-0a25b59ecb363cee1"
          },
          "dependencies": [
            "module.module_vpc.data.aws_availability_zones.available",
            "module.module_vpc.module.vpc.aws_route_table.public",
            "module.module_vpc.module.vpc.aws_subnet.public",
            "module.module_vpc.module.vpc.aws_vpc.this",
            "module.module_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2308eb5965789ad",
            "route_table_id": "rtb-0cb116bdd1c3764c1",
            "subnet_id": "subnet-026ed9c8a85992bb1"
          },
          "dependencies": [
            "module.module_vpc.data.aws_availability_zones.available",
            "module.module_vpc.module.vpc.aws_route_table.public",
            "module.module_vpc.module.vpc.aws_subnet.public",
            "module.module_vpc.module.vpc.aws_vpc.this",
            "module.module_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04969ad839cd934d7",
            "route_table_id": "rtb-0cb116bdd1c3764c1",
            "subnet_id": "subnet-00012e6d44b24475c"
          },
          "dependencies": [
            "module.module_vpc.data.aws_availability_zones.available",
            "module.module_vpc.module.vpc.aws_route_table.public",
            "module.module_vpc.module.vpc.aws_subnet.public",
            "module.module_vpc.module.vpc.aws_vpc.this",
            "module.module_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:729397435375:subnet/subnet-08ab41500e7101b06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ab41500e7101b06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "729397435375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iu-dev-data-platform-vpc-private-us-east-1a",
              "kubernetes.io/cluster/iu-dev-data-platform-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "iu-dev-data-platform-vpc-private-us-east-1a",
              "kubernetes.io/cluster/iu-dev-data-platform-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-068ad57d05edf7b40"
          },
          "dependencies": [
            "module.module_vpc.data.aws_availability_zones.available",
            "module.module_vpc.module.vpc.aws_vpc.this",
            "module.module_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:729397435375:subnet/subnet-0c2bffd8602b7b913",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2bffd8602b7b913",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "729397435375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iu-dev-data-platform-vpc-private-us-east-1b",
              "kubernetes.io/cluster/iu-dev-data-platform-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "iu-dev-data-platform-vpc-private-us-east-1b",
              "kubernetes.io/cluster/iu-dev-data-platform-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-068ad57d05edf7b40"
          },
          "dependencies": [
            "module.module_vpc.data.aws_availability_zones.available",
            "module.module_vpc.module.vpc.aws_vpc.this",
            "module.module_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:729397435375:subnet/subnet-082c1eb021229acbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082c1eb021229acbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "729397435375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iu-dev-data-platform-vpc-private-us-east-1c",
              "kubernetes.io/cluster/iu-dev-data-platform-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "iu-dev-data-platform-vpc-private-us-east-1c",
              "kubernetes.io/cluster/iu-dev-data-platform-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-068ad57d05edf7b40"
          },
          "dependencies": [
            "module.module_vpc.data.aws_availability_zones.available",
            "module.module_vpc.module.vpc.aws_vpc.this",
            "module.module_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:729397435375:subnet/subnet-0a25b59ecb363cee1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a25b59ecb363cee1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "729397435375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iu-dev-data-platform-vpc-public-us-east-1a",
              "kubernetes.io/cluster/iu-dev-data-platform-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "iu-dev-data-platform-vpc-public-us-east-1a",
              "kubernetes.io/cluster/iu-dev-data-platform-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-068ad57d05edf7b40"
          },
          "dependencies": [
            "module.module_vpc.data.aws_availability_zones.available",
            "module.module_vpc.module.vpc.aws_vpc.this",
            "module.module_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:729397435375:subnet/subnet-026ed9c8a85992bb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026ed9c8a85992bb1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "729397435375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iu-dev-data-platform-vpc-public-us-east-1b",
              "kubernetes.io/cluster/iu-dev-data-platform-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "iu-dev-data-platform-vpc-public-us-east-1b",
              "kubernetes.io/cluster/iu-dev-data-platform-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-068ad57d05edf7b40"
          },
          "dependencies": [
            "module.module_vpc.data.aws_availability_zones.available",
            "module.module_vpc.module.vpc.aws_vpc.this",
            "module.module_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:729397435375:subnet/subnet-00012e6d44b24475c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00012e6d44b24475c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "729397435375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iu-dev-data-platform-vpc-public-us-east-1c",
              "kubernetes.io/cluster/iu-dev-data-platform-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "iu-dev-data-platform-vpc-public-us-east-1c",
              "kubernetes.io/cluster/iu-dev-data-platform-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-068ad57d05edf7b40"
          },
          "dependencies": [
            "module.module_vpc.data.aws_availability_zones.available",
            "module.module_vpc.module.vpc.aws_vpc.this",
            "module.module_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:729397435375:vpc/vpc-068ad57d05edf7b40",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a8abb471644ce0ed",
            "default_route_table_id": "rtb-0f1828533973a7080",
            "default_security_group_id": "sg-0274cea81039b8bdf",
            "dhcp_options_id": "dopt-180bed62",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-068ad57d05edf7b40",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f1828533973a7080",
            "owner_id": "729397435375",
            "tags": {
              "Name": "iu-dev-data-platform-vpc",
              "kubernetes.io/cluster/iu-dev-data-platform-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "iu-dev-data-platform-vpc",
              "kubernetes.io/cluster/iu-dev-data-platform-eks-cluster": "shared"
            }
          }
        }
      ]
    }
  ]
}